virglrenderer crashes in virgl_egl_init()
The crash happens on attempt to parse the client_extensions
string. The reason is that virgl always assumes the eglQueryString()
call will return some data and does not check the return value. But it is not the case for GL implementations that do not support EXT_client_extensions. Those are allowed to return a NULL pointer when the display
parameter is EGL_NO_DISPLAY
.
Here, for example, is an implementation from Imagination Technologies that does not support these client extensions: http://cdn.imgtec.com/sdk-documentation/PowerVR.Supported+Extensions.OpenGL+ES.EGL.pdf