virgl/egl: fix null pointer dereference 2

Another null pointer dereference.  Fixes https://gitlab.freedesktop.org/virgl/virglrenderer/issues/67.

Reviewed-by Gert Wollny <gert.wollny@collabora.com>